# pyweb_module_14

contacts_api/: .example.env  limiter.py  main.py  pyproject.toml
contacts_api/docs/source/: conf.py
contacts_api/src/conf/: config.py
contacts_api/src/db/: db.py  models.py
contacts_api/src/repository/: contacts.py  users.py
contacts_api/src/routes/: auth.py  contacts.py  users.py
contacts_api/src/schemas/: contacts_schema.py  email_schema.py  password_schema.py  users_schema.py
contacts_api/src/services/: auth.py  cloudinary_service.py  email_service.py
contacts_api/src/services/templates/: email_template.html  reset_password_template.html
contacts_api/tests/: conftest.py  test.db  test_pytest_route_auth.py  test_unit_repository_contacts.py
